<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_rlt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bilkentazure.evenu.ForgotPassActivity">


    <include
        android:id="@+id/forgot_toolbar"
        layout="@layout/app_bar_layout"/>


    <TextView
        android:id="@+id/forgot_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/forgot_edt_email"
        android:layout_below="@+id/forgot_toolbar"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/roboto"
        android:text="@string/enter_your_email_or_school_id"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/forgot_btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/forgot_edt_email"
        android:layout_below="@+id/forgot_edt_email"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/send"
        android:textColor="@android:color/white"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/forgot_edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/forgot_txt_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_email_or_school_id"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="16sp"
        app:met_floatingLabel="normal">

        <requestFocus/>
    </com.rengwuxian.materialedittext.MaterialEditText>

</RelativeLayout>