<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_rlt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bilkentazure.evenu.LoginActivity">


    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar_layout"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_edt_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="16sp"
        app:met_floatingLabel="normal"/>


    <TextView
        android:id="@+id/login_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login_edt_email"
        android:layout_below="@+id/login_toolbar"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/roboto"
        android:text="@string/login_to_your_account"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_edt_email"
        android:layout_below="@+id/login_txt_forgot_pass"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round_button"
        android:fontFamily="@font/roboto_medium"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/login"
        android:textColor="@android:color/white"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_txt_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="16sp"
        app:met_floatingLabel="normal">

        <requestFocus/>
    </com.rengwuxian.materialedittext.MaterialEditText>

    <TextView
        android:id="@+id/login_txt_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_edt_email"
        android:layout_below="@+id/login_edt_password"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="Forgot password?"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"/>

</RelativeLayout>